# airball-embedded

./: .gitignore  LICENSE
arduino/: README.md
arduino/airball_probe/: README.md  XBee.h  airball_probe.ino
arduino/dlhrl10g_read/: dlhrl10g_read.ino
data/: LICENSE.txt
data/2017-12-10-01/: README  data.csv
data/2017-12-17-01/: README
data/2017-12-22-01/: README  on-batt.in  on-pwr.in
data/2017-12-26-01/: README  analyze.sh  plot.csv  plot.gpl  plot.in
data/2017-12-30-01/: fir-filter-airdata.m  plot.csv  plot.gpl  plot.in
data/2018-02-02-01/: README.md  plot.csv  plot.gpl
data/2018-02-10-01/: README.md  analyze.sh  plot.csv  plots.sc
data/2018-03-09-01/: README.md  airball-settings.json  cleanup.sh  plot.csv  plots.sc
data/2018-03-29-1/: .RData  .Rhistory  cleanup.sh  partial.csv
data/2018-05-05/: airball-settings.json
data/2018-05-29-1/: README.md
display/: CMakeLists.txt  README.md  TODO  ab_device_main.cpp  ab_main.cpp  aerodynamics.cpp  aerodynamics.h  aerodynamics_test.cpp  airball.cbp  airdata.cpp  airdata.h  airdata_test.cpp  controller.cpp  controller.h  controller.txt  data_logger.h  data_source.cpp  display.cpp  display.h  doxygen.config  fake_data_sentence.cpp  interpolation_table_test.cpp  screen.cpp  screen.h  serial_data_source_test_main.cpp  settings.h  units.h  widgets.cpp  widgets.h
display/src/: CMakeLists.txt  ab_device_main.cpp  ab_main.cpp  aerodynamics.cpp  aerodynamics.h  aerodynamics_test.cpp  airdata.cpp  airdata.h  airdata_plot_main.cpp  airdata_test.cpp  controller.cpp  controller.h  data_logger.cpp  data_logger.h  data_source.cpp  data_source.h  delay_timer.cpp  delay_timer.h  delay_timer_test.cpp  display.cpp  display.h  fake_data_main.cpp  fake_data_sentence.cpp  fake_data_sentence.h  interpolation_table.cpp  interpolation_table.h  interpolation_table_test.cpp  one_shot_timer.cpp  one_shot_timer.h  one_shot_timer_test.cpp  screen.cpp  settings.cpp  settings.h  units.h  user_input_source.cpp  user_input_source.h  user_input_source_test_main.cpp  widgets.cpp  widgets.h
docs/: _config.yml
eagle/DisplayBoard/: airball_display_board_v1.brd  airball_display_board_v1.sch
eagle/SensorBoard/: CHANGES.md  airball_sensor_board_v1.brd  airball_sensor_board_v2.brd  airball_sensor_board_v3.brd  airball_sensor_board_v3.sch  airball_sensor_board_v4.brd  airball_sensor_board_v4.sch  airball_sensor_board_v5.sch  board.b#1  board.b#2  board.b#3  board.b#4  board.b#5  board.b#6  board.b#7  board.b#8  board.b#9  board.pro  board.s#1  board.s#2  board.s#3  board.s#4  board.s#5  board.s#6  board.s#7  board.s#8  board.s#9  board.sch  eagle.epf
eagle/libraries/: airball.lbr  microbuilder.lbr
experimental/raspi-cross-compilation/: README.md
firmware/: LICENSE.md
firmware/adxl_accel_calibrate/: adxl_accel_calibrate.ino
firmware/adxl_accel_read/: adxl_accel_read.ino
firmware/airball_probe/: XBee.h  airball_probe.ino
firmware/airball_probe_esp32/: 10psf,smooth,fairing.csv  15psf,smooth,fairing.csv  20psf,smooth,fairing.csv  5psf,smooth,fairing.csv  airball_probe_esp32.ino  calibration.md  calibration_data.jinja  calibration_surface  calibration_surface.cpp  calibration_surface.h  calibration_surface_test_main.cpp  calibration_test  detect_resets.py  generate_calibrations.py  metric.h  probe_calibration.h  (+15 more)
hardware/: DESCRIPTION
host/: CMakeLists.txt  README.md
host/display/: CMakeLists.txt  README.md  ab_device_main.cpp  ab_main.cpp  aerodynamics.cpp  aerodynamics.h  aerodynamics_test.cpp  airdata.cpp  airdata.h  airdata_test.cpp  balance_layer.cpp  balance_layer.h  bcm2835_smi_ioctl_defs.cpp  bcm2835_smi_ioctl_defs.h  climb_rate_filter.cpp  climb_rate_filter.h  controller.cpp  controller.h  cubic_rate_filter.cpp  cubic_rate_filter.h  delay_timer.cpp  delay_timer_test.cpp  device_keyboard_listener.cpp  device_keyboard_listener.h  device_keyboard_listener_test_main.cpp  display.cpp  display.h  fake_telemetry_client.cpp  fake_telemetry_client.h  fake_telemetry_client_test.cpp  fb_fps_test_main.cpp  file_write_watch.cpp  file_write_watch.h  file_write_watch_test_main.cpp  flyonspeed_scheme.cpp  flyonspeed_scheme.h  framebuffer_screen.cpp  framebuffer_screen.h  http_server.cpp  http_server.h  (+62 more)
host/telemetry/: CMakeLists.txt  airdata_reduced_sample.cpp  airdata_reduced_sample.h  airdata_sample.h  battery_sample.h  deadline_tcp_line_reader.cpp  deadline_tcp_line_reader.h  esp32_telemetry_client.cpp  esp32_telemetry_client.h  format.h  log_telemetry_main.cpp  monitor_telemetry_main.cpp  sample.h  sampler.h  send_dummy_data_main.cpp  udp_packet_reader.cpp  udp_packet_reader.h  udp_packet_reader_main.cpp  xbee.cpp  xbee.h  xbee_api_frame.h  xbee_api_frame_test.cpp  xbee_api_payload.cpp  xbee_api_payload.h  xbee_api_payload_test.cpp  xbee_telemetry_client.cpp  xbee_telemetry_client.h  xbee_utils.cpp  xbee_utils.h
telemetry/: CMakeLists.txt  README.md
telemetry/airball_probe_telemetry/: CMakeLists.txt  airball_probe_telemetry.cpp  airdata_sample.cpp  airdata_sample.h  battery_sample.cpp  battery_sample.h  format.cpp  log_telemetry_main.cpp  sample.h  send_dummy_data_main.cpp  telemetry_client.h  xbee.cpp  xbee.h  xbee_api_frame.cpp  xbee_api_frame.h  xbee_api_frame_test.cpp  xbee_api_payload.cpp  xbee_api_payload.h  xbee_api_payload_test.cpp  xbee_known_types.cpp  xbee_known_types.h  xbee_packet.cpp  xbee_packet.h  xbee_telemetry_client.cpp  xbee_telemetry_client.h
telemetry/display/: CMakeLists.txt  README.md  ab_device_main.cpp  ab_main.cpp  airdata.cpp  airdata.h  airdata_test.cpp  controller.cpp  controller.h  data_logger.cpp  data_source.h  display.cpp  display.h  fake_data_main.cpp  fake_data_sentence.cpp  fake_telemetry_client.cpp  fake_telemetry_client.h  fake_telemetry_client_test.cpp  one_shot_timer_test.cpp  raspi-setup.md  screen.h  serial_data_source_test_main.cpp  settings.h  system_status.cpp  system_status.h  system_status_test.cpp  widgets.cpp  widgets.h
telemetry/display/src/: ab_device_main.cpp  airdata.cpp  airdata_plot_main.cpp  airdata_test.cpp  controller.h  fake_data_sentence.h  units.h  user_input_source.h
(+50 files in other folders)
